--- a/index.html
+++ b/index.html
@@ -126,8 +126,7 @@
     document.addEventListener('DOMContentLoaded', async () => {
 
         // --- CONFIGURATION ---
-        const SUBMISSIONS_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSxW6lYLIfH1r9954znKNbcE90y5qit38yhhyhZnTv_pMCM46H6DdFzQ5ekkJbqtAwfwVBbNegOVzmU/pub?gid=0&single=true&output=csv
-';
+        const SUBMISSIONS_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSxW6lYLIfH1r9954znKNbcE90y5qit38yhhyhZnTv_pMCM46H6DdFzQ5ekkJbqtAwfwVBbNegOVzmU/pub?gid=0&single=true&output=csv';
         const MODULES = {
             "DT-T0-RW-M1": { name: "Eng Mod 1", type: "RW", total: 27 },
             "DT-T0-RW-M2": { name: "Eng Mod 2", type: "RW", total: 27 },
