--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
     document.addEventListener('DOMContentLoaded', async () => {
 
         // --- CONFIGURATION ---
-        const SUBMISSIONS_CSV_URL = 'https://gist.githubusercontent.com/Gemini-User/a2d3989c9d4695b1219c63c5d6e2c39e/raw/6659c82c3c690225881024b4594266c28f742217/sample-student-submissions.csv';
-        const SCORING_TABLE_URL = 'https://raw.githubusercontent.com/YourUsername/YourRepo/main/data/sat-scoring-tables.json';
+        const SUBMISSIONS_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSxW6lYLIfH1r9954znKNbcE90y5qit38yhhyhZnTv_pMCM46H6DdFzQ5ekkJbqtAwfwVBbNegOVzmU/pub?gid=0&single=true&output=csv';
+        const SCORING_TABLE_URL = 'https://raw.githubusercontent.com/ghiassabir/Student-dashboard-with-real-data-v1/refs/heads/Diagnostic-Dashboard/scoring/Raw_to_Scaled_Conversion_table_RW.json';
         const TARGET_TEST_NUMBER = 0; 
 
         const MODULES = {
